@@ -13,6 +13,9 @@ For a complete change history, please see the CVS log comments.
 CHANGES - Current Version:
 --------------------------
 
+- Fixed bug with the characters ",\n in the tab2tab application. (bug 
+  1945)
+ 
 - mitab.h: Export MITABSpatialRef2CoordSys() and MITABCoordSys2SpatialRef()
   from the DLL.  Mostly for use in GDAL 
 
@@ -926,5 +929,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.218 2008-08-22 16:14:19 fwarmerdam Exp $
+$Id: HISTORY.TXT,v 1.219 2008-09-23 13:45:03 aboudreault Exp $
 ------------
